# philoagents

./: .pre-commit-config.yaml
philoagents-api/: Makefile  pyproject.toml
philoagents-api/data/: evaluation_dataset.json
philoagents-api/notebooks/: test_summarization_node.ipynb
philoagents-api/src/philoagents/: config.py
philoagents-api/src/philoagents/application/: long_term_memory.py
philoagents-api/src/philoagents/application/conversation_service/: generate_response.py  reset_conversation.py
philoagents-api/src/philoagents/application/conversation_service/workflow/: __init__.py  chains.py  graph.py  nodes.py
philoagents-api/src/philoagents/application/evaluation/: __init__.py  evaluate.py  generate_dataset.py  upload_dataset.py
philoagents-api/src/philoagents/application/rag/: embeddings.py  retrievers.py  splitters.py
philoagents-api/src/philoagents/domain/: evaluation.py  exceptions.py  philosopher.py  prompts.py
philoagents-api/src/philoagents/infrastructure/: api.py  opik_utils.py
philoagents-api/src/philoagents/infrastructure/mongo/: client.py
philoagents-api/tools/: call_agent.py  delete_long_term_memory.py  evaluate_agent.py  generate_evaluation_dataset.py
