[project]
name = "philoagents-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasketch>=1.6.5",
    "fastapi[standard]>=0.116.1",
    "ipykernel>=6.30.0",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-groq>=0.3.6",
    "langchain-huggingface>=0.3.1",
    "langchain-mongodb>=0.6.2",
    "langgraph>=0.5.4",
    "langgraph-checkpoint-mongodb>=0.1.4",
    "loguru>=0.7.3",
    "opik>=1.8.9",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.12.1",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[tool.pip]
extra-index-url = "https://download.pytorch.org/whl/cpu/torch_stable.html"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/philoagents"]

[tool.ruff]
target-version = "py312"